--- a/ObjectsComparer/ObjectsComparer/ObjectsComparer.csproj
+++ b/ObjectsComparer/ObjectsComparer/ObjectsComparer.csproj
@@ -1,8 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.1;netstandard2.0;netstandard1.6;net45</TargetFrameworks>
-    <Version>1.4.1</Version>
+    <TargetFrameworks>netstandard2.1;netstandard2.0;netstandard1.6;net45;net6.0</TargetFrameworks>
+    <Version>1.5.0</Version>
     <Authors>Valerii Tereshchenko</Authors>
     <Company />
     <Product>Objects Data Comparer</Product>
